--- a/index.html
+++ b/index.html
@@ -1,249 +1,135 @@
 <!doctype html>
 <html class="no-js" lang="en">
+
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Foundation | Welcome</title>
-<link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Natación</title>
+  <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
+  <link href='https://fonts.googleapis.com/css?family=Cabin+Condensed:700' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="src/css/cargando-fecto-agua.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
 </head>
+
 <body>
 
-<div class="top-bar">
-<div class="top-bar-left">
-<ul class="menu">
-<li class="menu-text">Marketing Site</li>
-<li><a href="#">One</a></li>
-<li><a href="#">Two</a></li>
-</ul>
-</div>
-<div class="top-bar-right">
-<ul class="menu">
-<li><a href="#">Three</a></li>
-<li><a href="#">Four</a></li>
-<li><a href="#">Five</a></li>
-<li><a href="#">Six</a></li>
-</ul>
-</div>
-</div>
+  <div class="top-bar">
+    <div class="top-bar-left">
+      <ul class="menu">
+        <li class="menu-text">Yeti Agency</li>
+      </ul>
+    </div>
+    <div class="top-bar-right">
+      <ul class="menu">
+        <li><a href="#">One</a></li>
+        <li><a href="#">Two</a></li>
+        <li><a href="#">Three</a></li>
+        <li><a href="#">Four</a></li>
+      </ul>
+    </div>
+  </div>
 
-<div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
-<ul class="orbit-container">
-<button class="orbit-previous" aria-label="previous"><span class="show-for-sr">Previous Slide</span>&#9664;</button>
-<button class="orbit-next" aria-label="next"><span class="show-for-sr">Next Slide</span>&#9654;</button>
-<li class="orbit-slide is-active">
-<img src="https://placehold.it/2000x750">
-</li>
-<li class="orbit-slide">
-<img src="https://placehold.it/2000x750">
-</li>
-<li class="orbit-slide">
-<img src="https://placehold.it/2000x750">
-</li>
-<li class="orbit-slide">
-<img src="https://placehold.it/2000x750">
-</li>
-</ul>
-</div>
-<div class="row column text-center">
-<h2>Our Newest Products</h2>
-<hr>
-</div>
-<div class="row small-up-2 large-up-4">
-<div class="column">
-<img class="thumbnail" src="https://placehold.it/300x400">
-<h5>Nulla At Nulla Justo, Eget</h5>
-<p>$400</p>
-<a href="#" class="button expanded">Buy</a>
-</div>
-<div class="column">
-<img class="thumbnail" src="https://placehold.it/300x400">
-<h5>Nulla At Nulla Justo, Eget</h5>
-<p>$400</p>
-<a href="#" class="button expanded">Buy</a>
-</div>
-<div class="column">
-<img class="thumbnail" src="https://placehold.it/300x400">
-<h5>Nulla At Nulla Justo, Eget</h5>
-<p>$400</p>
-<a href="#" class="button expanded">Buy</a>
-</div>
-<div class="column">
-<img class="thumbnail" src="https://placehold.it/300x400">
-<h5>Nulla At Nulla Justo, Eget</h5>
-<p>$400</p>
-<a href="#" class="button expanded">Buy</a>
-</div>
-</div>
-<hr>
-<div class="row column">
-<div class="callout primary">
-<h3>Really big special this week on items.</h3>
-</div>
-</div>
-<hr>
-<div class="row column text-center">
-<h2>Some Other Neat Products</h2>
-<hr>
-</div>
-<div class="row small-up-2 medium-up-3 large-up-6">
-<div class="column">
-<img class="thumbnail" src="https://placehold.it/300x400">
-<h5>Nulla At Nulla Justo, Eget</h5>
-<p>$400</p>
-<a href="#" class="button small expanded hollow">Buy</a>
-</div>
-<div class="column">
-<img class="thumbnail" src="https://placehold.it/300x400">
-<h5>Nulla At Nulla Justo, Eget</h5>
-<p>$400</p>
-<a href="#" class="button small expanded hollow">Buy</a>
-</div>
-<div class="column">
-<img class="thumbnail" src="https://placehold.it/300x400">
-<h5>Nulla At Nulla Justo, Eget</h5>
-<p>$400</p>
-<a href="#" class="button small expanded hollow">Buy</a>
-</div>
-<div class="column">
-<img class="thumbnail" src="https://placehold.it/300x400">
-<h5>Nulla At Nulla Justo, Eget</h5>
-<p>$400</p>
-<a href="#" class="button small expanded hollow">Buy</a>
-</div>
-<div class="column">
-<img class="thumbnail" src="https://placehold.it/300x400">
-<h5>Nulla At Nulla Justo, Eget</h5>
-<p>$400</p>
-<a href="#" class="button small expanded hollow">Buy</a>
-</div>
-<div class="column">
-<img class="thumbnail" src="https://placehold.it/300x400">
-<h5>Nulla At Nulla Justo, Eget</h5>
-<p>$400</p>
-<a href="#" class="button small expanded hollow">Buy</a>
-</div>
-</div>
-<hr>
-<div class="row">
-<div class="medium-4 columns">
-<h4>Top Products</h4>
-<div class="media-object">
-<div class="media-object-section">
-<img class="thumbnail" src="https://placehold.it/100x100">
-</div>
-<div class="media-object-section">
-<h5>Nunc Eu Ullamcorper Orci</h5>
-<p>Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque.</p>
-</div>
-</div>
-<div class="media-object">
-<div class="media-object-section">
-<img class="thumbnail" src="https://placehold.it/100x100">
-</div>
-<div class="media-object-section">
-<h5>Nunc Eu Ullamcorper Orci</h5>
-<p>Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque.</p>
-</div>
-</div>
-<div class="media-object">
-<div class="media-object-section">
-<img class="thumbnail" src="https://placehold.it/100x100">
-</div>
-<div class="media-object-section">
-<h5>Nunc Eu Ullamcorper Orci</h5>
-<p>Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque.</p>
-</div>
-</div>
-</div>
-<div class="medium-4 columns">
-<h4>Top Products</h4>
-<div class="media-object">
-<div class="media-object-section">
-<img class="thumbnail" src="https://placehold.it/100x100">
-</div>
-<div class="media-object-section">
-<h5>Nunc Eu Ullamcorper Orci</h5>
-<p>Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque.</p>
-</div>
-</div>
-<div class="media-object">
-<div class="media-object-section">
-<img class="thumbnail" src="https://placehold.it/100x100">
-</div>
-<div class="media-object-section">
-<h5>Nunc Eu Ullamcorper Orci</h5>
-<p>Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque.</p>
-</div>
-</div>
-<div class="media-object">
-<div class="media-object-section">
-<img class="thumbnail" src="https://placehold.it/100x100">
-</div>
-<div class="media-object-section">
-<h5>Nunc Eu Ullamcorper Orci</h5>
-<p>Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque.</p>
-</div>
-</div>
-</div>
-<div class="medium-4 columns">
-<h4>Top Products</h4>
-<div class="media-object">
-<div class="media-object-section">
-<img class="thumbnail" src="https://placehold.it/100x100">
-</div>
-<div class="media-object-section">
-<h5>Nunc Eu Ullamcorper Orci</h5>
-<p>Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque.</p>
-</div>
-</div>
-<div class="media-object">
-<div class="media-object-section">
-<img class="thumbnail" src="https://placehold.it/100x100">
-</div>
-<div class="media-object-section">
-<h5>Nunc Eu Ullamcorper Orci</h5>
-<p>Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque.</p>
-</div>
-</div>
-<div class="media-object">
-<div class="media-object-section">
-<img class="thumbnail" src="https://placehold.it/100x100">
-</div>
-<div class="media-object-section">
-<h5>Nunc Eu Ullamcorper Orci</h5>
-<p>Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque.</p>
-</div>
-</div>
-</div>
-</div>
-<div class="callout large secondary">
-<div class="row">
-<div class="large-4 columns">
-<h5>Vivamus Hendrerit Arcu Sed Erat Molestie</h5>
-<p>Curabitur vulputate, ligula lacinia scelerisque tempor, lacus lacus ornare ante, ac egestas est urna sit amet arcu. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed molestie augue sit.</p>
-</div>
-<div class="large-3 large-offset-2 columns">
-<ul class="menu vertical">
-<li><a href="#">One</a></li>
-<li><a href="#">Two</a></li>
-<li><a href="#">Three</a></li>
-<li><a href="#">Four</a></li>
-</ul>
-</div>
-<div class="large-3 columns">
-<ul class="menu vertical">
-<li><a href="#">One</a></li>
-<li><a href="#">Two</a></li>
-<li><a href="#">Three</a></li>
-<li><a href="#">Four</a></li>
-</ul>
-</div>
-</div>
-</div>
-<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-<script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
-<script>
-      $(document).foundation();
-    </script>
+  <div class="callout large primary wave">
+    <div class="row column text-center">
+      <h1>Our Blog</h1>
+    </div>
+  </div>
+  <div class="row" id="content">
+    <div class="medium-8 columns">
+      <div class="blog-post">
+        <h3>Awesome blog post title <small>3/6/2015</small></h3>
+        <img class="thumbnail" src="https://placehold.it/850x350">
+        <p>Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue.
+          Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio
+          ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget
+          luctus.</p>
+        <div class="callout">
+          <ul class="menu simple">
+            <li><a href="#">Author: Mike Mikers</a></li>
+            <li><a href="#">Comments: 3</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="blog-post">
+        <h3>Awesome blog post title <small>3/6/2015</small></h3>
+        <img class="thumbnail" src="https://placehold.it/850x350">
+        <p>Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue.
+          Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio
+          ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget
+          luctus.</p>
+        <div class="callout">
+          <ul class="menu simple">
+            <li><a href="#">Author: Mike Mikers</a></li>
+            <li><a href="#">Comments: 3</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="blog-post">
+        <h3>Awesome blog post title <small>3/6/2015</small></h3>
+        <img class="thumbnail" src="https://placehold.it/850x350">
+        <p>Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue.
+          Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio
+          ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget
+          luctus.</p>
+        <div class="callout">
+          <ul class="menu simple">
+            <li><a href="#">Author: Mike Mikers</a></li>
+            <li><a href="#">Comments: 3</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="blog-post">
+        <h3>Awesome blog post title <small>3/6/2015</small></h3>
+        <img class="thumbnail" src="https://placehold.it/850x350">
+        <p>Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue.
+          Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio
+          ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget
+          luctus.</p>
+        <div class="callout">
+          <ul class="menu simple">
+            <li><a href="#">Author: Mike Mikers</a></li>
+            <li><a href="#">Comments: 3</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="medium-3 columns" data-sticky-container>
+      <div class="sticky" data-sticky data-anchor="content">
+        <h4>Categories</h4>
+        <ul>
+          <li><a href="#">Skyler</a></li>
+          <li><a href="#">Jesse</a></li>
+          <li><a href="#">Mike</a></li>
+          <li><a href="#">Holly</a></li>
+        </ul>
+        <h4>Authors</h4>
+        <ul>
+          <li><a href="#">Skyler</a></li>
+          <li><a href="#">Jesse</a></li>
+          <li><a href="#">Mike</a></li>
+          <li><a href="#">Holly</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="row column">
+    <ul class="pagination" role="navigation" aria-label="Pagination">
+      <li class="disabled">Previous</li>
+      <li class="current"><span class="show-for-sr">You're on page</span> 1</li>
+      <li><a href="#" aria-label="Page 2">2</a></li>
+      <li><a href="#" aria-label="Page 3">3</a></li>
+      <li><a href="#" aria-label="Page 4">4</a></li>
+      <li class="ellipsis"></li>
+      <li><a href="#" aria-label="Page 12">12</a></li>
+      <li><a href="#" aria-label="Page 13">13</a></li>
+      <li><a href="#" aria-label="Next page">Next</a></li>
+    </ul>
+  </div>
+  <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+  <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
+  <script>
+    $(document).foundation();
+  </script>
 </body>
+
 </html>
